--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "lodash": "^4.17.21",
+    "ngx-chips": "^3.0.0",
+    "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
