--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "angular-calendar": "^0.30.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "bs-stepper": "^1.7.0",
+    "date-fns": "^2.29.1",
     "lodash": "^4.17.21",
     "ngx-chips": "^3.0.0",
     "ngx-material-timepicker": "^5.5.3",
