--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "bs-stepper": "^1.7.0",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.29.1",
     "lodash": "^4.17.21",
+    "ng2-charts": "^4.0.1",
     "ngx-chips": "^3.0.0",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~7.5.0",
